--- a/Personal Portfolio Website/css/skins/pink.css
+++ b/Personal Portfolio Website/css/skins/pink.css
@@ -6,6 +6,10 @@
   border-bottom: 4px solid #ec1839;
   border-right: 4px solid #ec1839;
 }
+.lightbox .lightbox-controls .prev-item .fa,
+.lightbox .lightbox-controls .next-item .fa,
+.portfolio .portfolio-info .icon .fa,
+.portfolio .portfolio-filter button.active,
 .service .service-item .service-item-inner .icon .fa,
 .about .about-content .about-text h3 span,
 .aside .nav li a:hover,
@@ -24,4 +28,8 @@
 .aside .nav-toggler span::after,
 .home .intro .social-links a {
   background-color: #ec1839;
+}
+
+.portfolio .portfolio-filter button.active {
+  border-color: #ec1839;
 }
