--- a/Personal Portfolio Website/css/style.css
+++ b/Personal Portfolio Website/css/style.css
@@ -513,3 +513,242 @@ color: #504e70;
   margin: 0;
 }
 /* ---------Service Section End--------- */
+/* ---------Portfolio Section--------- */
+.portfolio .container {
+  padding-bottom: 40px;
+}
+.portfolio .portfolio-filter {
+  flex: 0 0 100%;
+  -ms-flex: 0 0 100%;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.portfolio .portfolio-filter button {
+  border: none;
+  background-color: transparent;
+  margin: 0 10px;
+  text-transform: capitalize;
+  color: #302e4d;
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 700;
+  border-bottom: 2px solid transparent;
+  white-space: nowrap;
+  padding-bottom: 2px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+.portfolio .portfolio-item {
+  flex: 0 0 33.33%;
+  max-width: 33.33%;
+  margin-bottom: 30px;
+}
+.portfolio .portfolio-item.hide {
+  display: none;
+}
+.portfolio .portfolio-item.show {
+  display: block;
+  animation: showItem 0.5s ease;
+}
+@keyframes showItem {
+  0% {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes showItem {
+  0% {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    opacity: 1;
+  }
+}
+.portfolio .portfolio-item-inner  {
+  border: 6px solid #fdf9ff;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+}
+.portfolio .portfolio-item-inner .portfolio-img img {
+  width: 100%;
+  display: block;
+}
+.portfolio .portfolio-info {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(0,0,0,0.8);
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  padding: 30px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  opacity: 0;
+}
+.portfolio .portfolio-item-inner:hover .portfolio-info {
+  opacity: 1;
+}
+.portfolio .portfolio-info h4 {
+  font-size: 18px;
+  color: #fff;
+  font-weight: 700;
+  text-transform: capitalize;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transform: translateX(-20px);
+  -webkit-transform: translateX(-20px);
+  opacity: 0;
+}
+.portfolio .portfolio-item-inner:hover .portfolio-info h4 {
+  opacity: 1;
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+}
+.portfolio .portfolio-info .icon {
+  width: 40px;
+  height: 40px;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  transform: translateX(20px);
+  -webkit-transform: translateX(20px);
+  opacity: 0;
+}
+.portfolio .portfolio-item-inner:hover .portfolio-info .icon {
+  opacity: 1;
+  transform: translateX(0px);
+  -webkit-transform: translateX(0px);
+}
+.portfolio .portfolio-info .icon .fa {
+  line-height: 40px;
+}
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.6);
+  display: none;
+  align-items: center;
+  -ms-flex-align: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  cursor: zoom-out;
+  padding: 30px;
+}
+.lightbox.open {
+  display: flex;
+  -ms-display: flex;
+}
+.lightbox .lightbox-content img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 500px;
+  cursor: pointer;
+  display: block;
+  padding: 40px 0 30px;
+}
+.lightbox .lightbox-content {
+  position: relative;
+}
+.lightbox.open .lightbox-content {
+  animation: lightboxImage .5s ease;
+}
+@keyframes lightboxImage {
+  0% {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);  
+  }
+}
+@-webkit-keyframes lightboxImage {
+  0% {
+    transform: scale(0.8);
+    -webkit-transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+    -webkit-transform: scale(1);  
+  }
+}
+.lightbox .lightbox-content .lightbox-caption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  -ms-display: flex;
+  justify-content: space-between;
+  -ms-flex-pack: space-between;
+  color: #fff;
+  font-weight: 400;
+  z-index: -1;
+}
+.lightbox .lightbox-content .lightbox-close {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  top: 0;
+  right: 0;
+  font-size: 32px;
+  line-height: 40px;
+  color: #fff;
+  text-align: right;
+}
+.lightbox .lightbox-controls .prev-item,
+.lightbox .lightbox-controls .next-item {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background-color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+  top: 50%;
+  margin-top: -20px;
+  z-index: 110;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+}
+.lightbox .lightbox-controls .prev-item:active,
+.lightbox .lightbox-controls .next-item:active {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+}
+.lightbox .lightbox-controls .prev-item {
+  left: 30px;
+}
+.lightbox .lightbox-controls .next-item {
+  right: 30px;
+}
+.lightbox .lightbox-controls .prev-item .fa,
+.lightbox .lightbox-controls .next-item .fa {
+  font-size: 32px;
+  line-height: 40px;
+}
+
+/* ---------Portfolio Section End--------- */
